--- a/yffx.vcxproj
+++ b/yffx.vcxproj
@@ -129,11 +129,16 @@
   <ItemGroup>
     <ClCompile Include="item.cpp" />
     <ClCompile Include="rule.cpp" />
+    <ClCompile Include="table.cpp" />
     <ClCompile Include="yffx.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="item.h" />
     <ClInclude Include="rule.h" />
+    <ClInclude Include="table.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
