--- a/yffx.vcxproj.filters
+++ b/yffx.vcxproj.filters
@@ -43,5 +43,8 @@
     <None Include="README.md">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="table.csv">
+      <Filter>资源文件</Filter>
+    </None>
   </ItemGroup>
 </Project>
