增加了规约，但DFA中NULL还没处理

--- a/yffx.vcxproj
+++ b/yffx.vcxproj
@@ -127,13 +127,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="gen.cpp" />
     <ClCompile Include="item.cpp" />
     <ClCompile Include="rule.cpp" />
     <ClCompile Include="table.cpp" />
     <ClCompile Include="yffx.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="gen.h" />
     <ClInclude Include="item.h" />
+    <ClInclude Include="quadruple.h" />
     <ClInclude Include="rule.h" />
     <ClInclude Include="table.h" />
   </ItemGroup>
