--- a/yffx.vcxproj.filters
+++ b/yffx.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="gen.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="mid.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="rule.h">
@@ -45,6 +48,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="quadruple.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="mid.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
