--- a/yffx.vcxproj
+++ b/yffx.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="gen.cpp" />
     <ClCompile Include="item.cpp" />
+    <ClCompile Include="mid.cpp" />
     <ClCompile Include="rule.cpp" />
     <ClCompile Include="table.cpp" />
     <ClCompile Include="yffx.cpp" />
@@ -136,6 +137,7 @@
   <ItemGroup>
     <ClInclude Include="gen.h" />
     <ClInclude Include="item.h" />
+    <ClInclude Include="mid.h" />
     <ClInclude Include="quadruple.h" />
     <ClInclude Include="rule.h" />
     <ClInclude Include="table.h" />
