--- a/yffx.vcxproj
+++ b/yffx.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="entry.cpp" />
     <ClCompile Include="gen.cpp" />
     <ClCompile Include="item.cpp" />
     <ClCompile Include="mid.cpp" />
@@ -135,6 +136,7 @@
     <ClCompile Include="yffx.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="entry.h" />
     <ClInclude Include="gen.h" />
     <ClInclude Include="item.h" />
     <ClInclude Include="mid.h" />
