--- a/yffx.vcxproj
+++ b/yffx.vcxproj
@@ -152,7 +152,9 @@
     <None Include="table.csv" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="mid_code.txt" />
     <Text Include="output.txt" />
+    <Text Include="sym.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
