--- a/yffx.vcxproj.filters
+++ b/yffx.vcxproj.filters
@@ -81,5 +81,11 @@
     <Text Include="output.txt">
       <Filter>资源文件</Filter>
     </Text>
+    <Text Include="mid_code.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="sym.txt">
+      <Filter>资源文件</Filter>
+    </Text>
   </ItemGroup>
 </Project>
