--- a/yffx.vcxproj.filters
+++ b/yffx.vcxproj.filters
@@ -74,6 +74,9 @@
     <ClInclude Include="object.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="pcode.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md">
