--- a/PL0_code/PL0_code3.in
+++ b/PL0_code/PL0_code3.in
@@ -8,7 +8,7 @@ begin
 	i := 2;
 	while i < arg do
 	begin
-		if arg / i * i = arg then
+		if i * arg / i  = arg then
 		begin
 			ret := 0;
 			i := arg
