--- a/yffx.vcxproj.filters
+++ b/yffx.vcxproj.filters
@@ -91,21 +91,6 @@
     <None Include="table.csv">
       <Filter>资源文件</Filter>
     </None>
-    <None Include="..\cffx\PL0_code\PL0_code.in">
-      <Filter>资源文件</Filter>
-    </None>
-    <None Include="..\cffx\PL0_code\PL0_code0.in">
-      <Filter>资源文件</Filter>
-    </None>
-    <None Include="..\cffx\PL0_code\PL0_code1.in">
-      <Filter>资源文件</Filter>
-    </None>
-    <None Include="..\cffx\PL0_code\PL0_code2.in">
-      <Filter>资源文件</Filter>
-    </None>
-    <None Include="..\cffx\PL0_code\PL0_code3.in">
-      <Filter>资源文件</Filter>
-    </None>
     <None Include="PL0_code\PL0_code.in">
       <Filter>资源文件</Filter>
     </None>
@@ -133,6 +118,21 @@
       <Filter>资源文件</Filter>
     </Text>
     <Text Include="object_code.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="PL0_code\code.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="PL0_code\code0.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="PL0_code\code1.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="PL0_code\code2.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="PL0_code\code3.txt">
       <Filter>资源文件</Filter>
     </Text>
   </ItemGroup>
