--- a/PL0_code/PL0_code1.in
+++ b/PL0_code/PL0_code1.in
@@ -6,10 +6,10 @@ begin
 end;
 begin
   read(b);
-  while b<>0 do
+  while b#0 do
     begin
       call  p;
-      write(2*c);
+      write(c);
       read(b);
      end
 end.
