--- a/yffx.vcxproj
+++ b/yffx.vcxproj
@@ -153,11 +153,6 @@
     <ClInclude Include="tools.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\cffx\PL0_code\PL0_code.in" />
-    <None Include="..\cffx\PL0_code\PL0_code0.in" />
-    <None Include="..\cffx\PL0_code\PL0_code1.in" />
-    <None Include="..\cffx\PL0_code\PL0_code2.in" />
-    <None Include="..\cffx\PL0_code\PL0_code3.in" />
     <None Include="PL0_code\PL0_code.in" />
     <None Include="PL0_code\PL0_code0.in" />
     <None Include="PL0_code\PL0_code1.in" />
@@ -170,6 +165,11 @@
     <Text Include="mid_code.txt" />
     <Text Include="object_code.txt" />
     <Text Include="output.txt" />
+    <Text Include="PL0_code\code.txt" />
+    <Text Include="PL0_code\code0.txt" />
+    <Text Include="PL0_code\code1.txt" />
+    <Text Include="PL0_code\code2.txt" />
+    <Text Include="PL0_code\code3.txt" />
     <Text Include="sym.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
